Fixed hidden visibility on index page

--- a/_static/css/theme.css
+++ b/_static/css/theme.css
@@ -5307,6 +5307,6 @@ span[id*='MathJax-Span'] {
     display: none;
 }
 
-nav .hidden {
+nav .hidden, div.section#maintoc .hidden {
     display: unset;
 }
